@@ -1,14 +1,10 @@
 
 import org.gradle.internal.os.OperatingSystem
-import org.javamodularity.moduleplugin.extensions.CompileModuleOptions
-import org.javamodularity.moduleplugin.extensions.RunModuleOptions
 
 plugins {
     id("buildlogic.java-common-conventions")
 
     application
-
-    id("org.openjfx.javafxplugin") version("0.1.0")
 
     // Do not activate; causes issues with the modularity plugin (no tests found etc)
     // id("com.redock.classpathtofile") version "0.1.0"
@@ -22,8 +18,18 @@ version = project.findProperty("projVersion") ?: "100.0.0"
 val luceneVersion = "10.2.1"
 val pdfbox = "3.0.5"
 
+val javafxVersion = "24.0.1"
+
 dependencies {
     implementation(project(":jablib"))
+
+    implementation("org.openjfx:javafx-base:$javafxVersion")
+    implementation("org.openjfx:javafx-controls:$javafxVersion")
+    implementation("org.openjfx:javafx-fxml:$javafxVersion")
+    // implementation("org.openjfx:javafx-graphics:24.0.1")
+    implementation("org.openjfx:javafx-graphics:$javafxVersion")
+    implementation("org.openjfx:javafx-swing:$javafxVersion")
+    implementation("org.openjfx:javafx-web:$javafxVersion")
 
     implementation("org.slf4j:slf4j-api:2.0.17")
     implementation("org.tinylog:tinylog-api:2.7.0")
@@ -53,6 +59,10 @@ dependencies {
         exclude(group = "org.openjfx")
         exclude(group = "org.apache.logging.log4j")
         exclude(group = "tech.units")
+    }
+    implementation("com.dlsc.pdfviewfx:pdfviewfx:3.1.1") {
+        exclude(group = "org.openjfx")
+        exclude(module = "commons-lang3")
     }
 
     // Required by gemsfx
@@ -134,12 +144,6 @@ dependencies {
     testImplementation("com.github.javaparser:javaparser-symbol-solver-core:3.26.4")
 }
 
-javafx {
-    version = "24"
-    // javafx.swing required by com.dlsc.gemsfx
-    modules = listOf("javafx.base", "javafx.graphics", "javafx.fxml", "javafx.web", "javafx.swing")
-}
-
 application {
     mainClass.set("org.jabref.Launcher")
     mainModule.set("org.jabref")
@@ -183,10 +187,6 @@ application {
     )
 }
 
-// Workaround for https://github.com/openjfx/javafx-gradle-plugin/issues/89
-// See also https://github.com/java9-modularity/gradle-modules-plugin/issues/165
-modularity.disableEffectiveArgumentsAdjustment()
-
 /*
 jacoco {
     toolVersion = "0.8.13"
@@ -200,65 +200,10 @@ tasks.named<JavaExec>("run") {
     doFirst {
         // Clear the default JVM arguments to avoid warnings
         // application.applicationDefaultJvmArgs = emptyList()
-        application.applicationDefaultJvmArgs = listOf("--enable-native-access=ai.djl.tokenizers,ai.djl.pytorch_engine,com.sun.jna,javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core")
-    }
-
-    extensions.configure<RunModuleOptions>("moduleOptions") {
-        // On a change here, also adapt "application > applicationDefaultJvmArgs"
-        addExports.putAll(
-            mapOf(
-                // TODO: Remove access to internal API
-                "javafx.base/com.sun.javafx.event" to "org.jabref.merged.module",
-                "javafx.controls/com.sun.javafx.scene.control" to "org.jabref",
-
-                // ControlsFX compatibility
-                // We need to restate the ControlsFX exports, because we get following error otherwise:
-                //   java.lang.IllegalAccessError:
-                //     class org.controlsfx.control.textfield.AutoCompletionBinding (in module org.controlsfx.controls)
-                //     cannot access class com.sun.javafx.event.EventHandlerManager (in module javafx.base) because
-                //     module javafx.base does not export com.sun.javafx.event to module org.controlsfx.controls
-                // Taken from here: https://github.com/controlsfx/controlsfx/blob/9.0.0/build.gradle#L1
-                "javafx.graphics/com.sun.javafx.scene" to "org.controlsfx.controls",
-                "javafx.graphics/com.sun.javafx.scene.traversal" to "org.controlsfx.controls",
-                "javafx.graphics/com.sun.javafx.css" to "org.controlsfx.controls",
-                "javafx.controls/com.sun.javafx.scene.control" to "org.controlsfx.controls",
-                "javafx.controls/com.sun.javafx.scene.control.behavior" to "org.controlsfx.controls",
-                "javafx.controls/com.sun.javafx.scene.control.inputmap" to "org.controlsfx.controls",
-                "javafx.base/com.sun.javafx.event" to "org.controlsfx.controls",
-                "javafx.base/com.sun.javafx.collections" to "org.controlsfx.controls",
-                "javafx.base/com.sun.javafx.runtime" to "org.controlsfx.controls",
-                "javafx.web/com.sun.webkit" to "org.controlsfx.controls"
+        application.applicationDefaultJvmArgs =
+            listOf(
+                "--enable-native-access=ai.djl.tokenizers,ai.djl.pytorch_engine,com.sun.jna,javafx.graphics,javafx.media,javafx.web,org.apache.lucene.core"
             )
-        )
-
-        addOpens.putAll(
-            mapOf(
-                "javafx.controls/javafx.scene.control" to "org.jabref",
-                "javafx.controls/com.sun.javafx.scene.control" to "org.jabref",
-                "org.controlsfx.controls/impl.org.controlsfx.skin" to "org.jabref",
-                "org.controlsfx.controls/org.controlsfx.control.textfield" to "org.jabref",
-                "javafx.controls/javafx.scene.control.skin" to "org.controlsfx.controls",
-                "javafx.graphics/javafx.scene" to "org.controlsfx.controls",
-                "javafx.base/javafx.collections" to "org.jabref",
-                "javafx.base/javafx.collections.transformation" to "org.jabref"
-            )
-        )
-
-        addModules.add("jdk.incubator.vector")
-
-        createCommandLineArgumentFile = true
-    }
-}
-
-tasks.compileJava {
-    extensions.configure<CompileModuleOptions> {
-        addExports.putAll(
-            mapOf(
-                // TODO: Remove access to internal api
-                "javafx.controls/com.sun.javafx.scene.control" to "org.jabref",
-                "org.controlsfx.controls/impl.org.controlsfx.skin" to "org.jabref"
-            )
-        )
     }
 }
 
@@ -286,7 +231,8 @@ jlink {
         "zip-6",
         "--no-header-files",
         "--no-man-pages",
-        "--bind-services"
+        "--bind-services",
+        "--add-modules", "jdk.incubator.vector"
     )
 
     launcher {
@@ -488,4 +434,19 @@ if (OperatingSystem.current().isWindows) {
             }
         }
     }
+}
+
+javaModuleTesting.whitebox(testing.suites["test"]) {
+    requires.add("org.junit.jupiter.api")
+    requires.add("org.junit.jupiter.params")
+    requires.add("org.mockito")
+    requires.add("org.jabref.testsupport")
+}
+
+tasks.test {
+    jvmArgs = listOf(
+        "--add-opens", "javafx.graphics/com.sun.javafx.application=org.testfx",
+        "--add-reads", "org.mockito=java.prefs",
+        "--add-reads", "org.mockito=javafx.scene",
+    )
 }
